<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/smallSpace"
        android:layout_marginRight="@dimen/smallSpace"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/elevation"
        app:cardCornerRadius="@dimen/roundCorner"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/largeSpace">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="@dimen/h2"
                android:text="@string/LargeStub"/>

            <ImageView
                android:id="@+id/requiredIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@android:drawable/star_off"
                app:tint="@color/design_default_color_error" />

            <RadioGroup
                android:id="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@id/textViewQuestion"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normalText"
                    android:text="@string/smallStub"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normalText"
                    android:text="@string/mediumStub"/>

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normalText"
                    android:text="@string/smallStub"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/answerTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/radioGroup"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>