<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/purple_500"
        android:layout_marginLeft="@dimen/smallSpace"
        android:layout_marginRight="@dimen/smallSpace"
        android:layout_marginTop="@dimen/smallSpace"
        app:cardElevation="@dimen/elevation"
        app:cardCornerRadius="@dimen/roundCorner"
        app:cardUseCompatPadding="true">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallSpace"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h1"
                    android:layout_margin="@dimen/mediumSpace"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_about"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h3"
                    android:layout_margin="@dimen/mediumSpace"
                    app:layout_constraintTop_toBottomOf="@id/textViewTitle"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/breakLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light_gray"
                    android:layout_marginTop="@dimen/mediumSpace"
                    android:layout_marginBottom="@dimen/mediumSpace"
                    app:layout_constraintTop_toBottomOf="@id/textViewSubTitle"
                    android:orientation="horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/breakLine"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="@dimen/mediumSpace"
                    android:text="@string/required"
                    android:textSize="@dimen/h3"
                    android:drawableStart="@android:drawable/star_off"
                    android:drawableTint="@color/design_default_color_error"
                    android:textColor="@color/design_default_color_error"/>

                <ImageView
                    android:id="@+id/requiredIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/design_default_color_error" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </com.google.android.material.card.MaterialCardView>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>